Added CSS for the "Hero-banner" part.
Added CSS for the "hero-banner" part aswell as styled some buttons and added images to the banner.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                  You've ever heard of!</h1>
             <h3> We are as friendly as they come!<br>
                 You only run the risk of laughing too hard. </h3>
-            <a class="cta alt" href="#more-info">Read More</button>
+            <a class="cta alt" href="#more-info">Read More</a>
         </div>
         <div class="character1"></div>
         <div class="character2"></div>
@@ -61,10 +61,10 @@
         <h3>Left: things We Find Important<br>
         Below: Our Story</h3>
         <p>
-            A while ago, there was a group of monsters. They we're confused with their place in life. They didn't want to scare people or be mean to anyone.
+            A while ago, there was a group of monsters who were confused with their place in life. They didn't want to scare people or be mean to anyone.
         </p>
         <p>
-            All these monsters ever wanted to do, was be friendly, have fun, eat cake, throw parties and have movie nights with sleep overs.  
+            All these three monsters ever wanted to do, was be friendly, have fun, eat cake, throw parties and have movie nights with sleep overs.  
         </p>
         <p>
             And so this group of friends, consisting of Green, Red and Blue formed their own little club where no one was expected to be scare anyone or be mean to anyone at all.      
